Show data in Edit page and Delete added on index

--- a/consumer/weather/templates/weather/edit.html
+++ b/consumer/weather/templates/weather/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Bootstrap Example</title>
+        <title>Index</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -10,6 +10,37 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </head>
     <body>
-        Edit Page
+        <div class="jumbotron text-center">
+            <h1>Weather</h1>
+            <p>See the data obtained from the REST API</p> 
+        </div>
+        
+        <div class="container">
+            <form action="/action_page.php">
+                <div class="row">
+                    <div class="form-group col-md-2">
+                        <label>Temperature:</label>
+                        <input type="text" class="form-control" name="temperature" value="{{data.temperature}}">
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label>Humidity:</label>
+                        <input type="text" class="form-control" name="humidity" value="{{data.humidity}}">
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label>Luminosity:</label>
+                        <input type="text" class="form-control" name="luminosity" value="{{data.luminosity}}">
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label>Date:</label>
+                        <input type="text" class="form-control" name="date" value="{{data.date}}">
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label>Time:</label>
+                        <input type="text" class="form-control" name="time" value="{{data.time}}">
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Update</button>
+            </form>
+        </div>
     </body>
 </html>
